# SPEAR-Secure-Protocol-for-Encrypted-Asynchronous-Relay

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  test_crypto.cpp
cli-client/: decrypted_message.txt  package.json
cli-client/src/: cli.js  messaging-cli.js
crypto-core/: CMakeLists.txt
crypto-core/include/: key_exchange.hpp  key_management.hpp  signing.hpp  streaming.hpp  symmetric_crypto.hpp  types.hpp  utils.hpp
crypto-core/src/: key_exchange.cpp  key_management.cpp  signing.cpp  streaming.cpp  symmetric_crypto.cpp  types.cpp  utils.cpp
crypto-core/tests/: test_crypto_core.cpp
node-addon/: binding.gyp  test_addon.js
node-addon/src/: addon.cpp
server/: package.json
server/src/: server.js
server/src/controllers/: messageController.js  sessionController.js  userController.js
server/src/models/: database.js
server/src/routes/: index.js
web-ui/public/: index.html
